--- a/tasks/bbr-restore-director/task.yml
+++ b/tasks/bbr-restore-director/task.yml
@@ -3,7 +3,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: pcfnorm/rootfs
+    repository: cloudfoundrylondon/bbr-pipeline
+    tag: final
 
 inputs:
   - name: pcf-pipelines
