--- a/tasks/bbr-restore-director/task.yml
+++ b/tasks/bbr-restore-director/task.yml
@@ -9,7 +9,7 @@ image_resource:
 inputs:
   - name: pcf-pipelines
   - name: binary
-  - name: director-backup-bucket
+  - name: archive
 
 params:
   SKIP_SSL_VALIDATION: false
