--- a/restore-pcf/vsphere/pipeline.yml
+++ b/restore-pcf/vsphere/pipeline.yml
@@ -137,6 +137,19 @@ jobs:
       OPSMAN_DOMAIN_OR_IP_ADDRESS: {{opsman_domain_or_ip_address}}
       OPSMAN_SETTINGS_FILENAME: installation.zip
 
+- name: deploy-bosh-only
+  plan:
+  - aggregate:
+    - get: pcf-pipelines
+  - task: apply-changes
+    file: pcf-pipelines/tasks/apply-changes-director-only/task.yml
+    params:
+      OPSMAN_CLIENT_ID: {{opsman_client_id}}
+      OPSMAN_CLIENT_SECRET: {{opsman_client_secret}}
+      OPSMAN_USERNAME: {{opsman_admin_username}}
+      OPSMAN_PASSWORD: {{opsman_admin_password}}
+      OPSMAN_DOMAIN_OR_IP_ADDRESS: {{opsman_domain_or_ip_address}}
+
 - name: restore-bosh
   plan:
   - aggregate:
