--- a/restore-pcf/vsphere/pipeline.yml
+++ b/restore-pcf/vsphere/pipeline.yml
@@ -154,6 +154,8 @@ jobs:
   plan:
   - aggregate:
     - get: pcf-pipelines
+      passed: [deploy-bosh-only]
+      trigger: true
     - get: director-backup-bucket
     - get: bbr-release
 
