--- a/restore-pcf/vsphere/pipeline.yml
+++ b/restore-pcf/vsphere/pipeline.yml
@@ -45,7 +45,7 @@ resources:
     secret_access_key: ((storage-secret-access-key))
     versioned_file: installation.zip
 
-# - name: ert-backup-bucket
+# - name: ert-backup-s3
 #   type: s3
 #   source:
 #     bucket: ((backup-artifact-bucket))
@@ -66,7 +66,7 @@ resources:
     versioned_file: director-backup.tar
     disable_ssl: ((s3_disable_ssl))
 
-- name: ert-backup-bucket
+- name: ert-backup-s3
   type: s3
   source:
     bucket: ((backup-artifact-bucket))
@@ -220,7 +220,7 @@ jobs:
   - aggregate:
     - get: pcf-pipelines
       trigger: true
-    - get: ert-backup-bucket
+    - get: ert-backup-s3
     - get: bbr-release
   - aggregate:
     - task: extract-binary
@@ -251,7 +251,7 @@ jobs:
             repository: cloudfoundrylondon/bbr-pipeline
             tag: release-candidate
         inputs:
-        - name: ert-backup-bucket
+        - name: ert-backup-s3
         outputs:
         - name: archive
         run:
@@ -259,7 +259,7 @@ jobs:
           args:
           - -c
           - |
-            tar -xvf ert-backup-bucket/ert-backup.tar --strip 1 -C archive
+            tar -xvf ert-backup-s3/ert-backup.tar --strip 1 -C archive
 
   - task: bbr-restore-pas
     tags:
